--- a/css/index.css
+++ b/css/index.css
@@ -46,6 +46,8 @@ h1{display: none;}
 	height: 200px;
 }
 .down{
+	position: relative;
+	z-index: -1;
 	width: 100%;
 	height: 200px;
 	background: url('../img/bagbg.png') repeat;
@@ -98,6 +100,7 @@ h1{display: none;}
 .bagopen{
 	transform: rotateX(180deg);
 	transition:all 2s;
+	transition-delay: 3s;
 }
 /*“拆”的按钮*/ 
 .takebtn{
@@ -117,12 +120,8 @@ h1{display: none;}
 	box-shadow: 0 0 10px 10px rgba(0,0,0,.8);
 	cursor: pointer;
 }
-.fadeInUp{
-	animation:fadeInUp 1s infinite;
-}
-.flash{
-	animation:anima 1s infinite;
-}
+.fadeInUp{animation:fadeInUp 1s infinite;}
+.flash{animation:anima 1s infinite;}
 @keyframes fadeInUp{
 	0% {
 	    opacity: 0;
@@ -137,3 +136,20 @@ h1{display: none;}
 	    transform: translateY(0);
 	}
 }
+
+/*封皮完事了*/ 
+
+/*wrap样式*/
+.wrap{
+	margin-left: -550px;
+	left: 50%;
+	top: 103px;
+	position: absolute;
+	width: 1100px;
+	height: 1px;
+    background: #ddd;
+    box-shadow: 10px 0 5px #333;
+    opacity: 0;
+}
+
+
