--- a/css/index.css
+++ b/css/index.css
@@ -230,7 +230,7 @@ nav ul li:nth-child(4) i{
 .page1{background:rgb(111,196,203);}
 .page2{background:rgb(208,228,229);}
 .page3{background:rgb(253,240,1);}
-.table{
+.tab{
 	animation:pagetable 2s infinite;
 }
 @keyframes pagetable{
@@ -428,3 +428,39 @@ nav ul li:nth-child(4) i{
 .avic li:hover{background: #88d;height: 200px;}
 .avic li p{line-height: 80px;font-size: 24px;}
 .avic li dl{margin-top:10px;text-align: left;font-size: 14px;}
+
+
+
+
+/*page 4*/
+.table{ float: left; width: 840px;height: 500px;overflow-y: scroll;background: #eee;}
+.table::-webkit-scrollbar{width:4px;}
+.table::-webkit-scrollbar-track{background-color:rgb(253,240,99);}
+.table::-webkit-scrollbar-thumb{background-color:rgb(200,0,0);;}
+.bn{border-top:none!important;}
+.br{border-right:1px solid #333;}
+.bd{border-bottom:1px solid #333;}
+.table dd,.table dt{
+	float: left;
+	width: 167px;
+	height: 30px;
+	border-top:1px solid #333;
+	border-left:1px solid #333;
+	text-align: center;
+	line-height: 30px;
+	font-size: 16px;
+	box-sizing: border-box;
+} 
+.table img{position: relative;z-index: 10;height: 149px;}
+.table dt{background: #ddd;font-weight: 700;}
+.table dd ul{text-align: left;}
+
+.btnbox{margin-top:300px;margin-right:50px;float: right;}
+.btnbox li{margin-top:20px;width: 120px;height: 40px;background: #f66;border-radius:40px;line-height: 40px;text-align: center;font-weight:700;font-size: 20px;cursor: pointer;}
+
+/*百度分享*/
+.bdsharebuttonbox{
+	position: absolute;
+	top: 150px;
+	right: 64px;
+}
