--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 h1{display: none;}
-body{width: 1304px;
-    height: 702px;
+body{width: 130.4rem;
+    height: 70.2rem;
     overflow: hidden;}
 /*档案袋动画*/
 .bg{
@@ -9,18 +9,19 @@ body{width: 1304px;
 	z-index: -1;
 	width: 100%;
 	height: 100%;
-	min-width: 1280px;
+	min-width: 128rem;
 	background-image:url("../img/pagebg.jpg");
 	background-size:cover;
 	background-repeat: no-repeat;
 }
 .bagbody{
-	margin-left: -600px;
+	margin-left: -60rem;
 	left: 50%;
 	bottom: 0;
 	position: absolute;
-	width: 1200px;
-	height: 600px;
+	width: 120rem;
+	min-width: 120rem;
+	height: 60rem;
     background: url('../img/bagbg.png') repeat;
     box-shadow: 10px 10px 5px #333;
 }
@@ -30,30 +31,30 @@ body{width: 1304px;
 	transition:all 2s;
 }
 .bagtxt{
-	margin-top: 100px;
+	margin-top: 10rem;
 }
 .bagtxt p{
-	margin-left: 300px;
-	font-size: 98px;
+	margin-left: 30rem;
+	font-size: 9.8rem;
 	font-family: "Microsoft Yahei";
 	color: rgb(255,22,22);
 }
 .bagtxt b:last-child{
 	float: right;
-	margin-right: 300px;
+	margin-right: 30rem;
 }
 .baghead{
-	margin-top: -200px;
+	margin-top: -20rem;
 }
 .top{
 	width: 100%;
-	height: 200px;
+	height: 20rem;
 }
 .down{
 	position: relative;
 	z-index: -1;
 	width: 100%;
-	height: 200px;
+	height: 20rem;
 	background: url('../img/bagbg.png') repeat;
 	border-top: 1px solid rgb(150,100,79);
 	border-bottom: 1px solid rgb(150,100,79);
@@ -64,41 +65,41 @@ body{width: 1304px;
 	100%{ box-shadow: 0 0 10px 10px #333;}
 }
 .circle{
-	margin: 60px auto;
+	margin: 6rem auto;
 	display: block;
-	width: 50px;
-	height: 50px;
+	width: 5rem;
+	height: 5rem;
 	border-radius: 50%;
 	background: rgb(150,100,79);
-    border:20px solid #fff;
+    border:2rem solid #fff;
 } 
 .line,.moveline{
 	position: absolute;   
     display: block;
-    width: 50px;
+    width: 5rem;
 }
 .line{
-	top: 108px;
-    left: 573px;
-    height: 241px;
+	top: 10.8rem;
+    left: 57.3rem;
+    height: 24.1rem;
     border-right: 2px solid #fff;
     border-left: 2px solid #fff;
 }
 .moveline{
-    height: 50px;
-    top: 322px;
-    left: 575px;
+    height: 5rem;
+    top: 32.2rem;
+    left: 57.5rem;
     transition: all 2s;
 }
 .rotate{
     transform: rotate(-720deg);
 }
 .moveline:before{
-	margin-left: 50px;
+	margin-left: 5rem;
 	content: "";
 	display: block;
 	width: 2px;
-	height: 160px;
+	height: 16rem;
 	background: #fff;
 }
 .bagopen{
@@ -111,13 +112,13 @@ body{width: 1304px;
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	margin-top: -50px;
-	margin-left: -150px;
-	width: 300px;
-	height: 100px;
-	font-size: 72px;
+	margin-top: -5rem;
+	margin-left: -15rem;
+	width: 30rem;
+	height: 10rem;
+	font-size: 7.2rem;
 	text-align: center;
-	line-height: 100px;
+	line-height: 10rem;
 	color: rgb(255,231,24);
 	background:rgb(212, 75, 40);
 	border-radius: 10px;
@@ -129,7 +130,7 @@ body{width: 1304px;
 @keyframes fadeInUp{
 	0% {
 	    opacity: 0;
-	    transform: translateY(20px);
+	    transform: translateY(2rem);
 	}
 	100% {
 	    opacity: 1;
@@ -141,11 +142,12 @@ body{width: 1304px;
 
 /*wrap样式*/
 .wrap{
-	margin-left: -550px;
+	margin-left: -55rem;
 	left: 50%;
-	top: 103px;
+	top: 10.3rem;
 	position: absolute;
-	width: 1100px;
+	width: 110rem;
+	min-width: 110rem;
 	height: 1px;
     opacity: 0;
 }
@@ -153,10 +155,11 @@ body{width: 1304px;
 /* page*/
 .page{
 	position: absolute;
-	padding:20px;
-	margin-top: 34px;
-	height: 599px;
-	width: 1100px;
+	padding:2rem;
+	margin-top: 3.4rem;
+	height: 60rem;
+	width: 110rem;
+	min-width: 110rem;
 	background: #fff;
     box-sizing: border-box;
     z-index: 5;
@@ -164,32 +167,32 @@ body{width: 1304px;
 .page:before{
     display: block;
     position: absolute;
-    top: -34px;
+    top: -3.4rem;
     left: 0;
     content: "";
-    height: 34px;
-    width: 1100px;
+    height: 3.4rem;
+    width: 110rem;
     background: url(../img/pagehead.png) repeat-x;
 }
 /*nav*/
 nav{
 	position: absolute;
-	top: 30px;
-	left: 1100px;
+	top: 3rem;
+	left: 110rem;
 }
 nav ul li{
-	margin-top: 4px;
-	height: 40px;
-	width: 40px;
-	line-height: 40px;
+	margin-top: .4rem;
+	height: 4rem;
+	width: 4rem;
+	line-height: 4rem;
 	text-align: center;
 	cursor: pointer;
 	transition:all .5s;
 	overflow: hidden;
-	font-size: 20px;
+	font-size: 2rem;
 }
 nav ul li:hover{
-	width: 100px;
+	width: 10rem;
 	transition:all .5s;
 }
 nav ul li:hover i{
@@ -209,8 +212,8 @@ nav ul li:nth-child(4){
 }
 nav ul li i{
 	display: block;
-	width: 40px;
-	height: 40px;
+	width: 4rem;
+	height: 4rem;
 }
 nav ul li:nth-child(1) i{
 	background: url(../img/icon.png) -40px;
@@ -235,7 +238,7 @@ nav ul li:nth-child(4) i{
 }
 @keyframes pagetable{
 	30%{left: 0;transform: scale(1.1,1.1);z-index: 10;}
-	50%{left:-1100px;}
+	50%{left:-110rem;}
 	70%{transform: scale(1,1);z-index:6;}
 	100%{left:0px;}
 }
@@ -245,12 +248,12 @@ nav ul li:nth-child(4) i{
 .left{width: 40%;border-right: 1px dotted #333;box-sizing: border-box;}
 .right{width: 60%;}
 .border{
-	margin-top:30px;
-	margin-left: 100px;
+	margin-top:3rem;
+	margin-left: 10rem;
 	transform:rotateZ(-15deg);
 	display: inline-block;
-    width: 180px;
-    height: 180px;
+    width: 18rem;
+    height: 18rem;
     border: 15px solid transparent;
     border-image: url(../img/photobg.png) 10 round;
 }
@@ -258,72 +261,72 @@ nav ul li:nth-child(4) i{
 .page0 .border:after{
 	content: "朋友告诉我放我自己照片会扣很多分所以暂时藏起来了,如果你够仔细还是能找到的,悲伤脸";
 	display: block;
-	margin-top:20px;
+	margin-top:2rem;
 	text-indent: 24px;
 }
-.page0 .right img{position: absolute;bottom: 40px;z-index: -1;}
-.box{width: 180px;height: 180px;background: url('../img/me.png'); cursor:help;}	
-.info{margin-top: 20px;}
+.page0 .right img{position: absolute;bottom: 4rem;z-index: -1;width: 29rem;height: 30rem}
+.box{width: 18rem;height: 18rem;background: url('../img/me.png'); cursor:help;}	
+.info{margin-top: 2rem;}
 .info h2,.info p{display: inline-block;}
-.info h2{text-indent: 24px;font-weight: 700;font-size: 18px;}
-.info p{text-indent: 32px;font-size: 16px;}
+.info h2{text-indent: 2.4rem;font-weight: 700;font-size: 1.8rem;}
+.info p{text-indent: 3.2rem;font-size: 1.6rem;}
 .ultit{
 	float: left;
-	padding: 20px;
-	font-size: 40px;
+	padding: 2rem;
+	font-size: 4rem;
 }
 .ultit i{ text-decoration: line-through; }
 .ultit:after{
 	content: "简史";
 	display: block;
-    margin-top: -20px;
-    margin-left: 160px;
+    margin-top: -2rem;
+    margin-left: 16rem;
 }
 .list{
 	margin:0 auto;
-	padding:20px;
+	padding:2rem;
 	position: relative;
 }
 .list li{
 	position: absolute;
-	padding: 30px;
-	width: 150px;
-	height:150px;
-	font-size: 15px;
+	padding: 3rem;
+	width: 15rem;
+	height:15rem;
+	font-size: 1.5rem;
 	color: #0ff;
 	text-align: center;
 	border-radius: 50%;
 }
 .list li p i{
 	display: block;
-	font-size: 40px;
+	font-size: 4rem;
 }
 .list li p {
 	text-shadow: 1px 1px 1px rgba(255,255,255,.6);
 }
 .list li:nth-child(1){
-	top: 20px;
-	left: 380px;
+	top: 2rem;
+	left: 38rem;
 	color: #4c9582;
 	border: 6px solid #539e89; 
 	background: #51c9a6;
 }
 .list li:nth-child(2){
-	top: 100px;
-	left: 260px;
+	top: 10rem;
+	left: 26rem;
 	color: #bd607d;
 	border: 6px solid #e29ab0;
 	background: #e77b9d;
 }
 .list li:nth-child(3){
-	top: 180px;
-	left: 130px;
+	top: 18rem;
+	left: 13rem;
 	color: #5e9fb5;
 	border: 6px solid #a0d0de;
 	background: #7ecae4;
 }
 .list li:nth-child(4){
-	top: 260px;
+	top: 26rem;
 	color: #ba9d5b;
 	border: 6px solid #ddc899;
 	background: #f0cd79;
@@ -363,7 +366,7 @@ nav ul li:nth-child(4) i{
 	}
 	50%{
 		opacity: 0;
-		transform:translateY(200px);
+		transform:translateY(20rem);
 	}
 	100%{
 		opacity: 1;
@@ -373,21 +376,21 @@ nav ul li:nth-child(4) i{
 
 
 /*page2*/
-.page1 .left{padding:20px;box-sizing: border-box;font-size: 24px;text-align: center;}
+.page1 .left{padding:2rem;box-sizing: border-box;font-size: 24px;text-align: center;}
 .page1 .left img{margin:0 auto;background: #fff;display: block;} 
-.page1 .left h2{margin:20px 0;}    
-.page1 .left ul{height: 333px;overflow-y: scroll;background: #fff;}
-.page1 .left ul li{font-size: 16px;text-align: left;word-wrap:break-word;}
-.page1 .left ul::-webkit-scrollbar{width:10px;}
+.page1 .left h2{margin:2rem 0;}    
+.page1 .left ul{height: 33.3rem;overflow-y: scroll;background: #fff;}
+.page1 .left ul li{font-size: 1.6rem;text-align: left;word-wrap:break-word;}
+.page1 .left ul::-webkit-scrollbar{width:1rem;}
 .page1 .left ul::-webkit-scrollbar-track{background-color:#bee1eb;}
 .page1 .left ul::-webkit-scrollbar-thumb{background-color:#00aff0;}
 
-.page1 .right h2{margin:20px;font-size: 24px;}
-.skill{margin:0 auto;width: 450px;text-align: center;}
-.skill li{float: left;width: 200px;height: 200px;}
-.skill li:nth-child(1),.skill li:nth-child(2){margin-bottom: 10px;}
-.skill li:nth-child(odd){margin-right: 10px;margin-left: 20px;}
-.skill li dl{display: none;padding-top: 10px;font-size: 14px;}
+.page1 .right h2{margin:2rem;font-size: 2.4rem;}
+.skill{margin:0 auto;width: 45rem;text-align: center;}
+.skill li{float: left;width: 20rem;height: 20rem;}
+.skill li:nth-child(1),.skill li:nth-child(2){margin-bottom: 1rem;}
+.skill li:nth-child(odd){margin-right: 1rem;margin-left: 2rem;}
+.skill li dl{display: none;padding-top: 1rem;font-size: 1.4rem;}
 .skill li dd{text-align: left;}
 
 .bounceOut{animation: bounceOut 1s infinite;}
@@ -419,23 +422,23 @@ nav ul li:nth-child(4) i{
 
 
 /* page 3*/
-.page2 .left{padding:20px;box-sizing: border-box;}
-.page2 .left{font-size: 24px;text-align: center;} 
-.page2 .left h2{margin:20px 0;} 
-.page2 .left ol{padding-top: 20px;}
-.page2 .left ol li{margin-top:10px;font-size: 16px;text-align: left;word-wrap:break-word;}
+.page2 .left{padding:2rem;box-sizing: border-box;}
+.page2 .left{font-size: 2.4rem;text-align: center;} 
+.page2 .left h2{margin:2rem 0;} 
+.page2 .left ol{padding-top: 2rem;}
+.page2 .left ol li{margin-top:1rem;font-size: 1.6rem;text-align: left;word-wrap:break-word;}
 
-.avic li{margin:6px 20px;padding:10px;height:100px;overflow:hidden;box-sizing:border-box;background: #99e;text-align: center;border-radius: 8px;cursor: pointer;transition:height 1s;}
-.avic li:hover{background: #88d;height: 200px;}
-.avic li p{line-height: 80px;font-size: 24px;}
-.avic li dl{margin-top:10px;text-align: left;font-size: 14px;}
+.avic li{margin:.6rem 2rem;padding:1rem;height:10rem;overflow:hidden;box-sizing:border-box;background: #99e;text-align: center;border-radius: 8px;cursor: pointer;transition:height 1s;}
+.avic li:hover{background: #88d;height: 20rem;}
+.avic li p{line-height: 8rem;font-size: 2.4rem;}
+.avic li dl{margin-top:1rem;text-align: left;font-size: 1.4rem;}
 
 
 
 
 /*page 4*/
-.tablebox{ float: left; width: 840px;height: 500px;overflow-y: scroll;}
-.tablebox::-webkit-scrollbar{width:4px;}
+.tablebox{ float: left; width: 84rem;height: 50rem;overflow-y: scroll;}
+.tablebox::-webkit-scrollbar{width:.4rem;}
 .tablebox::-webkit-scrollbar-track{background-color:rgb(253,240,99);}
 .tablebox::-webkit-scrollbar-thumb{background-color:rgb(200,0,0);;}
 .table{width: 836px;height: 1178px;background: #eee;}
@@ -457,14 +460,14 @@ nav ul li:nth-child(4) i{
 .table dt{background: #ddd;font-weight: 700;}
 .table dd ul{text-align: left;}
 
-.btnbox{margin-top:300px;margin-right:50px;float: right;}
-.btnbox li{margin-top:20px;width: 120px;height: 40px;background: #f66;border-radius:40px;line-height: 40px;text-align: center;font-weight:700;font-size: 20px;cursor: pointer;}
+.btnbox{margin-top:30rem;margin-right:5rem;float: right;}
+.btnbox li{margin-top:2rem;width: 12rem;height: 4rem;background: #f66;border-radius:4rem;line-height: 4rem;text-align: center;font-weight:700;font-size: 2rem;cursor: pointer;}
 
 /*百度分享*/
 .bdsharebuttonbox{
 	position: absolute;
-	top: 150px;
-	right: 80px;
+	top: 15rem;
+	right: 8rem;
 }
 
 
@@ -474,14 +477,14 @@ nav ul li:nth-child(4) i{
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	margin-top: -50px;
-	margin-left: -150px;
-	padding-top: 30px;
-	width: 300px;
-	height: 100px;
-	font-size: 24px;
+	margin-top: -5rem;
+	margin-left: -15rem;
+	padding-top: 3rem;
+	width: 30rem;
+	height: 10rem;
+	font-size: 2.4rem;
 	text-align: center;
 	background: #eee;
 	color: #333;
-	border-radius: 20px;
+	border-radius: 2rem;
 } 
